--- a/client/styles.css
+++ b/client/styles.css
@@ -92,3 +92,11 @@ body, html {
 .four-dots .dot:nth-child(4) {
 	transform: translate(10px, 10px);
 }				
+
+.playerCountOption {
+	border-radius: 25%;
+	border-width: 0px;
+	width: 70px;
+	height: 70px;
+	background-color: #fff;
+}
