--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 :root {
 	--color1: #f54e42;
-	--color2: #262626;
+	--color2: #2b2b2b;
 	--color3: #4287f5;
 }
 
@@ -16,7 +16,7 @@ body, html {
 	display: inline-flex;
 	width: 100%;
 	height: 100%;
-	background-color: #f54e42;
+	background-color: var(--color2);
 	justify-content: center;
 	align-items: center;
 }
@@ -185,4 +185,37 @@ input[type="submit"] {
   width: 50%;
   height: 30px;
   background-color: var(--color1);
+}
+
+.sidebar {
+	width: 140px;
+	background-color: #1a1a1a;
+	position: fixed;
+  height: 100%;
+  overflow: auto;
+	margin: 0;
+  padding: 0;
+}
+
+@media screen and (max-width: 700px) {
+  .sidebar {
+    width: 100%;
+    height: auto;
+    position: relative;
+  }
+  .sidebar a {float: left;}
+  div.content {margin-left: 0;}
+}
+
+.sidebar a {
+  display: block;
+  color: white;
+  padding: 16px;
+  text-decoration: none;
+}
+
+
+.sidebar a:hover {
+  background-color: #555;
+  color: white;
 }
