--- a/src/styles.css
+++ b/src/styles.css
@@ -14,12 +14,12 @@ body, html {
 
 #container {
 	display: inline-flex;
-	width: 100%;
 	height: 100%;
 	background-color: var(--color2);
 	justify-content: center;
 	align-items: center;
 }
+
 #board {
 	display: inline-flex;
 	flex-direction: column;
@@ -30,7 +30,7 @@ body, html {
 }
 
 .gridSpace {
-	width: 50px; 
+	width: 50px;
 	height: 50px;
 	background-color: #fff;
 	border-radius: 25%;
@@ -46,59 +46,59 @@ body, html {
 }
 
 
-.one-dot, .two-dots, .three-dots, .four-dots {
+.dots-1, .dots-2, .dots-3, .dots-4 {
 	display: flex;
 	justify-content: center;
 	align-items: center;
 }
 
-.one-dot .dot {
-	position: static; 
+.dots-1 .dot {
+	position: static;
 	display: block;
-	margin: 0 auto; 
+	margin: 0 auto;
 }
 
-.two-dots .dot {
-	position: static; 
+.dots-2 .dot {
+	position: static;
 	display: inline-block;
-	margin-right: 5px; 
-	margin-left: 5px; 
-}		
+	margin-right: 5px;
+	margin-left: 5px;
+}
 
-.three-dots .dot:nth-child(2), .three-dots .dot:nth-child(3) {
-	position: static; 
+.dots-3 .dot:nth-child(2), .dots-3 .dot:nth-child(3) {
+	position: static;
 	transform: translateY(8.66025403784px);
 	display: inline-block;
-	margin-right: 5px; 
-	margin-left: 5px; 
-	
-}	
-.three-dots .dot:first-child {
-	position: absolute; 
+	margin-right: 5px;
+	margin-left: 5px;
+
+}
+.dots-3 .dot:first-child {
+	position: absolute;
 	display: inline-block;
 	transform: translateY(-8.66025403784px);
-}	
+}
 
-.four-dots .dot {
+.dots-4 .dot {
 	position: fixed;
 	display: inline-block;
 }
 
-.four-dots .dot:nth-child(1) {
+.dots-4 .dot:nth-child(1) {
 	transform: translate(-10px, -10px);
-}	
+}
 
-.four-dots .dot:nth-child(2) {
+.dots-4 .dot:nth-child(2) {
 	transform: translate(-10px, 10px);
 }
 
-.four-dots .dot:nth-child(3) {
+.dots-4 .dot:nth-child(3) {
 	transform: translate(10px, -10px);
 }
 
-.four-dots .dot:nth-child(4) {
+.dots-4 .dot:nth-child(4) {
 	transform: translate(10px, 10px);
-}				
+}
 
 .boardOptions {
 	display: inline-flex;
@@ -204,13 +204,17 @@ input[type="submit"] {
     position: relative;
   }
   .sidebar a {float: left;}
-  div.content {margin-left: 0;}
+  div#container {margin-left: 0 !important; width: 100% !important;}
+}
+
+div#container {
+  width: calc(100% - 140px);
+  margin-left: 140px;
 }
 
 .sidebar a {
   display: block;
   color: white;
-  padding: 16px;
   text-decoration: none;
 }
 
