ai is now rid of bugs (probably

--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -22,7 +22,7 @@
   </select>
 </div>
 <dialog #gameOverScreen>
-  <span id="gameOverText"></span>
+  <span id="gameOverText">{{ gameOverText }}</span>
   <div id="gameOverButtons">
     <button class="rematch">Rematch</button>
   </div>
