--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -1,6 +1,6 @@
 <div id="board" #boardElement [style]="isPlaying?'display:inline-flex':'display:none'">
   <div id="evalBar">
-    <div id="redEvalBar"></div>
+    <div id="redEvalBar" [style.width]="evalBarWidth()"></div>
   </div>
   <div class="row" *ngFor="let row of board; index as i;">
     <div [id]="i+'-'+j" #gridSpace [class]="'gridSpace'+' '+'dots-'+space.value" (click)="pressed(j,i)" *ngFor="let space of row; index as j;">
