--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -15,7 +15,7 @@
   <button class="playerCountOption" (click)="start(3)">3 Player</button>
   <button class="playerCountOption" (click)="start(4)">4 Player</button>
   <br/>
-  <select [(value)]="startPosition" name="startPos" id="startPosSelect">
+  <select [(ngModel)]="startPosition" name="startPos" id="startPosSelect">
     <option value="pickaxe">The Pickaxe (recommended)</option>
     <option value="corners">Corners</option>
     <option value="custom">Fully Custom</option>
