--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,1 @@
-<div class="sidebar">
-  <a class="active" href="/">Home</a>
-</div>
-
-<div id="container">
-  <app-game></app-game>
-</div>
-
-<script src="js/ai.js"></script>
-<script src="js/space.js"></script>
-<script src="js/main.js"></script>
-
+<router-outlet><router-outlet>
