--- a/src/styles.css
+++ b/src/styles.css
@@ -12,12 +12,17 @@ body, html {
 	font-family: "JetBrains Mono", monospace;
 }
 
+#content {
+  background-color: var(--color2);
+  height: 100%;
+}
+
 #container {
 	display: inline-flex;
 	height: 100%;
-	background-color: var(--color2);
 	justify-content: center;
 	align-items: center;
+  width: 100%;
 }
 
 #board {
@@ -204,10 +209,10 @@ input[type="submit"] {
     position: relative;
   }
   .sidebar a {float: left;}
-  div#container {margin-left: 0 !important; width: 100% !important;}
+  div#content {margin-left: 0 !important; width: 100% !important;}
 }
 
-div#container {
+div#content {
   width: calc(100% - 140px);
   margin-left: 140px;
 }
@@ -216,6 +221,7 @@ div#container {
   display: block;
   color: white;
   text-decoration: none;
+  padding: 16px;
 }
 
 
