--- a/src/styles.css
+++ b/src/styles.css
@@ -229,3 +229,18 @@ div#content {
   background-color: #555;
   color: white;
 }
+
+.sidebar form {
+  padding: 0;
+}
+
+.sidebar form button {
+  background-color: rgba(0, 0, 0, 0);
+  background: none;
+  border: none;
+  padding: 16px;
+  cursor: pointer;
+  font-size: 16px;
+  line-height: 1.5;
+  display: inline;
+}
