--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,14 @@
 <div class="sidebar">
   <a href="/">Home</a>
-  <a href="/signup">Signup</a>
+  <a *ngIf="userData == null" href="/signup">Signup</a>
   <form *ngIf="userData != undefined">
     <button (click)="signOut()" type="button">Logout</button>
   </form>
-  <p style="bottom: 0px; position: absolute" *ngIf="userData != undefined && userData.user_metadata != undefined">{{ userData.user_metadata['name'] }}</p>
+  <div class="profile_button" style="bottom: 0px; position: absolute" *ngIf="userData != undefined && userData.user_metadata != undefined">
+    <img style="--avatar-size: 50px" class="avatar" [src]="userData.user_metadata['avatar_url']" alt="Your Profile Picture">
+    <!-- <p style="font-size: 14px">{{ userData.user_metadata['name'] }}</p> -->
+  </div>
+
 </div>
 
 <div id="content">
