fix the profile showing bug thing

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,7 @@
     <button (click)="signOut()" type="button">Logout</button>
   </form>
   <div class="profile_button" style="bottom: 0px; position: absolute" *ngIf="userData != undefined && userData.user_metadata != undefined">
-    <img style="--avatar-size: 50px" class="avatar" [src]="userData.user_metadata['avatar_url']" alt="Your Profile Picture">
+    <img style="--avatar-size: 50px" class="avatar" [src]="userData.user_metadata['avatar_url']" alt="Your Profile Picture" referrerpolicy="no-referrer">
     <!-- <p style="font-size: 14px">{{ userData.user_metadata['name'] }}</p> -->
   </div>
 
