fix mobile profile bug, fix login bug

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
   <form *ngIf="userData != undefined">
     <button (click)="signOut()" type="button">Logout</button>
   </form>
-  <div class="profile_button" style="bottom: 0px; position: absolute" *ngIf="userData != undefined && userData.user_metadata != undefined">
+  <div class="profile_button" *ngIf="userData != undefined && userData.user_metadata != undefined">
     <img style="--avatar-size: 50px" class="avatar" [src]="userData.user_metadata['avatar_url']" alt="Your Profile Picture" referrerpolicy="no-referrer">
   </div>
 
