--- a/src/styles.css
+++ b/src/styles.css
@@ -207,6 +207,9 @@ input[type="submit"] {
     width: 100%;
     height: 55px;
     position: relative;
+  }
+
+  .sidebar * {
     float: left;
   }
 
