add a bunch of stuff move a bunch of stuff around and make view games render the starting position

--- a/src/app/view-past-games/view-past-games.component.html
+++ b/src/app/view-past-games/view-past-games.component.html
@@ -1,5 +1,5 @@
 <div>
-  <div class="gameDisplay" *ngFor="let game of games">
+  <div class="gameDisplay" *ngFor="let game of games" [routerLink]="'/view-game/' + game.id">
     <span class="title">{{ game.winner }} Won!</span>
     <br/>
     <span class="metadata">AI Difficulty: {{ game.ai_difficulty.difficulty }}</span>
