--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,15 @@
 <div class="sidebar">
   <a routerLink="/">Home</a>
   <a *ngIf="userData == null" routerLink="/signup">Signup</a>
-  <form *ngIf="userData != undefined">
-    <button (click)="signOut()" type="button">Logout</button>
-  </form>
-  <div class="profile_button" *ngIf="userData != undefined && userData.user_metadata != undefined">
-    <img style="--avatar-size: 50px" class="avatar" [src]="userData.user_metadata['avatar_url']" alt="Your Profile Picture" referrerpolicy="no-referrer">
+  <div *ngIf="userData != undefined">
+    <a routerLink="/past-games">Past Games</a>
+    <form>
+      <button (click)="signOut()" type="button">Logout</button>
+    </form>
+    <div class="profile_button" *ngIf="userData != undefined && userData.user_metadata != undefined">
+      <img style="--avatar-size: 50px" class="avatar" [src]="userData.user_metadata['avatar_url']" alt="Your Profile Picture" referrerpolicy="no-referrer">
+    </div>
   </div>
-
 </div>
 
 <div id="content">
