--- a/src/styles.css
+++ b/src/styles.css
@@ -241,17 +241,22 @@ div#content {
 }
 
 
-.sidebar *:hover:not(.profile_button) {
+.sidebar *:hover:not(div) {
   background-color: #555;
   color: white;
 }
 
-.sidebar form {
+.sidebar .div *:hover:not(.profile_button) {
+  background-color: #555;
+  color: white;
+}
+
+.sidebar div form, .sidebar div {
   padding: 0;
   width: auto;
 }
 
-.sidebar form button {
+.sidebar div form button {
   background-color: rgba(0, 0, 0, 0);
   background: none;
   border: none;
