--- a/src/app/view-game/view-game.component.html
+++ b/src/app/view-game/view-game.component.html
@@ -1,1 +1,12 @@
-<app-game #gameElement></app-game>
+<div style="display: inline-block; width: auto;">
+  <app-game #gameElement></app-game>
+  <br/>
+  <div class="controls">
+    <button style="float: left" (click)="prev()">
+      <svg xmlns="http://www.w3.org/2000/svg" height="30" width="26.25" viewBox="0 0 448 512"><!--!Font Awesome Free 6.6.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path [attr.fill]="isActiveButton(false) ? '#ffffff' : '#888888'" d="M9.4 233.4c-12.5 12.5-12.5 32.8 0 45.3l160 160c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L109.2 288 416 288c17.7 0 32-14.3 32-32s-14.3-32-32-32l-306.7 0L214.6 118.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0l-160 160z"/></svg>
+    </button>
+    <button style="float: right;" (click)="next()">
+      <svg xmlns="http://www.w3.org/2000/svg" height="30" width="26.25" viewBox="0 0 448 512"><!--!Font Awesome Free 6.6.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path [attr.fill]="isActiveButton(true) ? '#ffffff' : '#888888'" d="M438.6 278.6c12.5-12.5 12.5-32.8 0-45.3l-160-160c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L338.8 224 32 224c-17.7 0-32 14.3-32 32s14.3 32 32 32l306.7 0L233.4 393.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0l160-160z"/></svg>
+    </button>
+  </div>
+</div>
