--- a/src/styles.css
+++ b/src/styles.css
@@ -1,15 +1,16 @@
 :root {
-	--color1: #f54e42;
-	--color2: #2b2b2b;
-	--color3: #4287f5;
+  --color1: #f54e42;
+  --color2: #2b2b2b;
+  --color3: #4287f5;
 }
 
-body, html {
-	margin: 0;
-	padding: 0;
-	width: 100%;
-	height: 100%;
-	font-family: "JetBrains Mono", monospace;
+body,
+html {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
+  font-family: "JetBrains Mono", monospace;
 }
 
 #content {
@@ -18,119 +19,122 @@ body, html {
 }
 
 #container {
-	display: inline-flex;
-	height: 100%;
-	justify-content: center;
-	align-items: center;
+  display: inline-flex;
+  height: 100%;
+  justify-content: center;
+  align-items: center;
   width: 100%;
 }
 
 #board {
-	display: inline-flex;
-	flex-direction: column;
+  display: inline-flex;
+  flex-direction: column;
 }
 
 .row {
-	display: inline-flex;
+  display: inline-flex;
 }
 
 .gridSpace {
-	width: 50px;
-	height: 50px;
-	background-color: #fff;
-	border-radius: 25%;
-	margin: 2px;
-	box-sizing: border-box;
+  width: 50px;
+  height: 50px;
+  background-color: #fff;
+  border-radius: 25%;
+  margin: 2px;
+  box-sizing: border-box;
 }
 
 .dot {
-	width: 10px;
-	height: 10px;
-	border-radius: 50%;
-	position: absolute;
+  width: 10px;
+  height: 10px;
+  border-radius: 50%;
+  position: absolute;
 }
 
-
-.dots-1, .dots-2, .dots-3, .dots-4 {
-	display: flex;
-	justify-content: center;
-	align-items: center;
+.dots-1,
+.dots-2,
+.dots-3,
+.dots-4 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .dots-1 .dot {
-	position: static;
-	display: block;
-	margin: 0 auto;
+  position: static;
+  display: block;
+  margin: 0 auto;
 }
 
 .dots-2 .dot {
-	position: static;
-	display: inline-block;
-	margin-right: 5px;
-	margin-left: 5px;
+  position: static;
+  display: inline-block;
+  margin-right: 5px;
+  margin-left: 5px;
 }
 
-.dots-3 .dot:nth-child(2), .dots-3 .dot:nth-child(3) {
-	position: static;
-	transform: translateY(8.66025403784px);
-	display: inline-block;
-	margin-right: 5px;
-	margin-left: 5px;
-
+.dots-3 .dot:nth-child(2),
+.dots-3 .dot:nth-child(3) {
+  position: static;
+  transform: translateY(8.66025403784px);
+  display: inline-block;
+  margin-right: 5px;
+  margin-left: 5px;
 }
 .dots-3 .dot:first-child {
-	position: absolute;
-	display: inline-block;
-	transform: translateY(-8.66025403784px);
+  position: absolute;
+  display: inline-block;
+  transform: translateY(-8.66025403784px);
 }
 
 .dots-4 .dot {
-	position: fixed;
-	display: inline-block;
+  position: fixed;
+  display: inline-block;
 }
 
 .dots-4 .dot:nth-child(1) {
-	transform: translate(-10px, -10px);
+  transform: translate(-10px, -10px);
 }
 
 .dots-4 .dot:nth-child(2) {
-	transform: translate(-10px, 10px);
+  transform: translate(-10px, 10px);
 }
 
 .dots-4 .dot:nth-child(3) {
-	transform: translate(10px, -10px);
+  transform: translate(10px, -10px);
 }
 
 .dots-4 .dot:nth-child(4) {
-	transform: translate(10px, 10px);
+  transform: translate(10px, 10px);
 }
 
 .boardOptions {
-	display: inline-flex;
-	justify-content: center;
+  display: inline-flex;
+  justify-content: center;
 }
 
 .playerCountOption {
-	width: 70px;
-	height: 70px;
-	border-radius: 25%;
+  width: 70px;
+  height: 70px;
+  border-radius: 25%;
 }
 
 #startPosSelect {
-	border-radius: 10px;
+  border-radius: 10px;
 }
 
-.playerCountOption, #startPosSelect {
-	border-width: 0px;
-	background-color: #fff;
+.playerCountOption,
+#startPosSelect {
+  border-width: 0px;
+  background-color: #fff;
 }
 
 dialog {
-	background-color: #262626;
-	border-radius: 10px;
-	border-color: transparent;
-	color: white;
-	text-align: center;
+  background-color: #262626;
+  border-radius: 10px;
+  border-color: transparent;
+  color: white;
+  text-align: center;
 }
 
 dialog::backdrop {
@@ -138,52 +142,52 @@ dialog::backdrop {
 }
 
 #startPosSelect {
-	margin: auto;
+  margin: auto;
 }
 
 #gameOverText {
-	font-weight: 700;
-	font-size: 1.2em;
+  font-weight: 700;
+  font-size: 1.2em;
 }
 
 #gameOverButtons {
-	margin-top: 10px;
+  margin-top: 10px;
 }
 
 .rematch:active {
-	border-bottom-width: 0px;
+  border-bottom-width: 0px;
 }
 
 .rematch {
-	width: 268px;
-	height: 54px;
-	background-color: var(--color3);
-	border-width: 0px;
-	border-radius: 10px;
-	border-color: rgba(0, 0, 0, 0.5);
-	border-bottom-width: 3px;
-	font-size: 1.1em;
-	box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
+  width: 268px;
+  height: 54px;
+  background-color: var(--color3);
+  border-width: 0px;
+  border-radius: 10px;
+  border-color: rgba(0, 0, 0, 0.5);
+  border-bottom-width: 3px;
+  font-size: 1.1em;
+  box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
 }
 
 input[type="submit"] {
-	width: 100%;
-	border-bottom-width: 3px;
-	border-color: rgba(0, 0, 0, 0.5);
-	border-radius: 10px;
-	border-width: 0px;
-	margin-top: 20px;
-	min-height: 50px;
-	font-size: 1.1em;
-	background-color: var(--color3);
+  width: 100%;
+  border-bottom-width: 3px;
+  border-color: rgba(0, 0, 0, 0.5);
+  border-radius: 10px;
+  border-width: 0px;
+  margin-top: 20px;
+  min-height: 50px;
+  font-size: 1.1em;
+  background-color: var(--color3);
 }
 
 #evalBar {
   width: 100%;
   background-color: var(--color3);
-	border: solid;
-	border-width: 2px;
-	border-color: var(--color2);
+  border: solid;
+  border-width: 2px;
+  border-color: var(--color2);
 }
 
 #redEvalBar {
@@ -193,12 +197,12 @@ input[type="submit"] {
 }
 
 .sidebar {
-	width: 140px;
-	background-color: #1a1a1a;
-	position: fixed;
+  width: 140px;
+  background-color: #1a1a1a;
+  position: fixed;
   height: 100%;
   overflow: auto;
-	margin: 0;
+  margin: 0;
   padding: 0;
 }
 
@@ -216,7 +220,7 @@ input[type="submit"] {
   div#content {
     margin-left: 0 !important;
     width: 100% !important;
-    height: calc(100% - 55px)
+    height: calc(100% - 55px);
   }
 
   .profile_button {
@@ -240,7 +244,6 @@ div#content {
   padding: 16px;
 }
 
-
 .sidebar *:hover:not(div) {
   background-color: #555;
   color: white;
@@ -251,7 +254,8 @@ div#content {
   color: white;
 }
 
-.sidebar div form, .sidebar div {
+.sidebar div form,
+.sidebar div {
   padding: 0;
   width: auto;
 }
@@ -303,25 +307,25 @@ div#content {
 }
 
 .tooltip-text {
-    visibility: hidden;
-    width: 200px;
-    background-color: #333;
-    color: #fff;
-    text-align: center;
-    border-radius: 5px;
-    padding: 5px;
-    position: absolute;
-    z-index: 1;
-    right: 125%; /* Position above the question mark */
-    bottom: 0;
-    margin-left: -100px;
-    opacity: 0;
-    transition: opacity 0.3s;
+  visibility: hidden;
+  width: 200px;
+  background-color: #333;
+  color: #fff;
+  text-align: center;
+  border-radius: 5px;
+  padding: 5px;
+  position: absolute;
+  z-index: 1;
+  right: 125%; /* Position above the question mark */
+  bottom: 0;
+  margin-left: -100px;
+  opacity: 0;
+  transition: opacity 0.3s;
 }
 
 .tooltip.tooltip-hover .tooltip-text {
   visibility: visible;
-  opacity: 1
+  opacity: 1;
 }
 
 .gameDisplay {
@@ -342,21 +346,3 @@ div#content {
   color: #000;
   font-size: 16px;
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
