no margin on last child of games and is also last .gameDisplay

--- a/src/styles.css
+++ b/src/styles.css
@@ -352,6 +352,10 @@ div#content {
   margin-bottom: 10px;
 }
 
+.gameDisplay:last-child {
+  margin-bottom: 0px;
+}
+
 .gameDisplay .metadata {
   color: #333;
   font-size: 13px;
