--- a/src/styles.css
+++ b/src/styles.css
@@ -11,6 +11,7 @@ html {
   width: 100%;
   height: 100%;
   font-family: "JetBrains Mono", monospace;
+  background-color: var(--color2);
 }
 
 #container {
