make more accessible

--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -41,7 +41,7 @@
     >
   </div>
   <br />
-  <select [(ngModel)]="startPosition" name="startPos" id="startPosSelect">
+  <select [(ngModel)]="startPosition" name="startPos" id="startPosSelect" aria-label="Start Position Selector">
     <option value="pickaxe">The Pickaxe (recommended)</option>
     <option value="corners">Corners</option>
     <option value="custom">Fully Custom</option>
