--- a/src/styles.css
+++ b/src/styles.css
@@ -318,6 +318,7 @@ div#content {
   min-height: 100%;
   background-color: var(--color2);
   margin-left: 140px;
+  transition: background-color 0.3s ease-in-out;
 }
 
 #content {
